traefik/traefik-deployment.yaml
# Ingress deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress
        name: traefik-ingress
    spec:
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik-ingress
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --kubernetes.ingressClass=traefik-class
        - --kubernetes
        - --logLevel=DEBUG
        - --api
        - --accesslog.fields.names='StartLocal=keep StartUTC=drop'
        # - --configFile=/config/traefik.toml
