traefik/traefik-ingress.yaml
# Ingress with basic auth
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-class
    traefik.ingress.kubernetes.io/auth-type: basic
    traefik.ingress.kubernetes.io/auth-secret: admin
spec:
  rules:
  - host: capstone.facelessvoid.co
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: admin
